ProdIND/ProdPrograms/force-app/main/default/objects/Chassis_Decoder_Year__c/Chassis_Decoder_Year__c.object-meta.xml
<CustomObject>
    <label>Chassis Decoder (Year)</label>
    <nameField>
        <label>Chassis Decoder (Year) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chassis Decoder (Year)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>