ProdIND/ProdPrograms/force-app/main/default/objects/Chassis_Decoder_Year__c/fields/Make_Name__c.field-meta.xml
<CustomField>
    <fullName>Make_Name__c</fullName>
    <label>Make Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>