ProdIND/ProdPrograms/force-app/main/default/objects/Chassis_Decoder_Year__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>