ProdIND/ProdPrograms/force-app/main/default/objects/Chassis_Decoder_Year__c/fields/Year_Code__c.field-meta.xml
<CustomField>
    <fullName>Year_Code__c</fullName>
    <label>Year Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>